# CourseMate

./: .env.example  .gitignore  README.md  pyproject.toml
data/: deadlines.csv  student_preferences.json
data/materials/: experiment-2-byoa.md
examples/: demo_transcript.md
report/: draft_report.md
src/student_course_agent/: __init__.py  agent.py  cli.py  mcp_server.py  models.py  tools.py
tests/: test_mcp_server.py  test_tools.py
