[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "student-course-agent"
version = "0.1.0"
description = "A BYOA student course task assistant that uses local course context and tools."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7",
    "openai>=1.40",
    "pypdf>=4.2",
]

[project.scripts]
student-agent = "student_course_agent.cli:main"
student-agent-mcp = "student_course_agent.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
